<resources>
    <string name="app_name">TesteAndroidv2</string>
    <string name="hint_user">User</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="title_recents">Recentes</string>
    <string name="title_account">Conta</string>
    <string name="title_balance">Saldo</string>
    <string name="msg_invalid_email">Informe um email valido.</string>
    <string name="msg_invalid_password">A senha deve conter, uma letra maiuscula, um caracter especial e um caracter alfanumérico.</string>
    <string name="msg_invalid_cpf">Informe um cpf valido.</string>
    <string name="msg_invalid_email_or_cpf">Informe um email ou cpf valido.</string>
    <string name="msg_error_save_user">Ocorreu um erro ao salvar o usuario</string>
</resources>